# veri-yapilari-ikinci-odev

./: CMakeLists.txt  bagilliste.cpp  bagilliste.h  contributors.txt  dugum.cpp  dugum.h  gezici.h  islem.cpp  islem.h  konsol.cpp  konsol.h  main.cpp  makefile  sayi.cpp  sayi.h
include/: bagilliste.h  dugum.h  gezici.h  islem.h  konsol.h  sayi.h  secim.h
src/: bagilliste.cpp  dugum.cpp  gezici.cpp  islem.cpp  konsol.cpp  main.cpp  sayi.cpp  secim.cpp  test.cpp
